@@ -1,6 +1,8 @@
 imagesdir = $(imagedir)
 images_DATA =	       \
-	background.png
+	background.png \
+	novell.png
 
 EXTRA_DIST =	       \
-	background.png
+	background.png \
+	novell.png
